# cheap-llm-router

./: .gitignore  INSTALL.md  INSTALL.ru.md  INSTALL.uk.md  LICENSE  README.md  README.ru.md  README.uk.md  UNINSTALL.md  UNINSTALL.ru.md  UNINSTALL.uk.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: test.yml
.planning/cheap-llm-router-v9-integration/: PLAN.md
docs/: HOOKS.md  claude-md-snippet.md
docs/superpowers/specs/: 2026-05-05-cheap-llm-router-design.md
scripts/: test-model.sh
src/cheap_llm/: __init__.py  cli.py  client.py  config.py  hook_pretool_read.py  secrets.py  session_resolver.py  usage_log.py
src/cheap_llm/_data/: cheap-llm-session.sh  claude_md_snippet.md  rule_template.md
src/cheap_llm/commands/: diagnose.py  extract.py  install_claude_rule.py  install_hook.py  install_rule.py  read.py
src/cheap_llm/transcript/: __init__.py  claude.py  codex.py  generic.py
tests/: conftest.py  test_config.py  test_diagnose.py  test_extract.py  test_hook_pretool_read.py  test_install_hook.py  test_install_rule.py  test_read_integration.py  test_read_unit.py  test_secrets_guard.py  test_session_hook.py  test_transcript.py  test_usage_log.py  test_version.py
tests/fixtures/: sample_session_claude.jsonl  sample_session_codex.jsonl
tests/fixtures/sample_module/: auth.py  cache.py  db.py  handlers.py  metrics.py
